# Precision_landing_aruco

./: README.md  aruco_pl.sh  start_nodes.sh  stream.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/precision_land/share/precision_land/: package.bash  package.zsh
log/: latest_build
src/ark/: CMakeLists.txt
src/ark/launch/: aruco.launch.py  aruco_tracker.launch.py
src/ark/src/: aruco.cpp  aruco_detect.cpp  buffer.cpp  daruco.cpp  rec.cpp  video.cpp
src/aruco_tracker/: ArucoTracker.hpp  CMakeLists.txt  aruco.cpp  package.xml
src/aruco_tracker/cfg/: ros_gz_bridge.yaml
src/aruco_tracker/launch/: aruco_tracker.launch.py  cam.launch.py
src/aruco_tracker/src/: aruco.cpp  buffer.cpp  camera.cpp
src/drone/: CMakeLists.txt  package.xml
src/drone/config/: ekf.yaml  ekf2.yaml  navsat.yaml
src/drone/launch/: rviz.launch.py
src/drone/rviz/: robot.rviz  robot1.rviz
src/drone/src/: filter.cpp  gps.cpp  rf.cpp  text.cpp
src/drone/urdf/: robot.urdf
src/land/: package.xml  setup.cfg  setup.py
src/land/land/: land.py
src/precision_land/: PrecisionLand.cpp
